# youtube-in-video-search

./: .gitattributes  .gitignore  README.md  app.py  encoder.py  fetch_transcript.py  model.py  preprocessing.py  pyproject.toml  requirements.txt  test.py
all-MiniLM-L12-v2/: rust_model.ot
models/QA_Model/: config.json  tokenizer.json  tokenizer_config.json
models/Similarity_Model/: README.md  config.json  tokenizer_config.json
models/all-MiniLM-L12-v2/: config.json
